--- a/morpheus-DFP/src/styles/components/sidePanels.module.css
+++ b/morpheus-DFP/src/styles/components/sidePanels.module.css
@@ -35,9 +35,15 @@
   border-bottom: solid 1px gray;
 }
 
-.listOfAttributes {
+.listOfConfig {
   background-color: #0f0f0f !important;
   padding: 20px 0px !important;
+  border: none;
+}
+
+.listOfAttributes {
+  background-color: #0f0f0f !important;
+  padding: 5px 0px !important;
   border: none;
 }
 
