add settings already applied message on grayed out button

--- a/morpheus-DFP/src/styles/components/sidePanels.module.css
+++ b/morpheus-DFP/src/styles/components/sidePanels.module.css
@@ -68,7 +68,7 @@
   margin-bottom: 1%;
 }
 
-.infoHoverRightPanel{
+.infoHoverRightPanel {
   float: right;
   margin-bottom: 1%;
 }
@@ -94,6 +94,10 @@
   width: 50% !important;
   margin-right: 5% !important;
   float: right;
+}
+
+.fullWidth {
+  width: 100%;
 }
 
 .loadingIcon {
